src/test/rustdoc-ui/intra-doc-alias-ice.stderr
error: unresolved link to `TypeAlias::hoge`
  --> $DIR/intra-doc-alias-ice.rs:5:30
   |
LL | /// [broken cross-reference](TypeAlias::hoge)
   |                              ^^^^^^^^^^^^^^^ unresolved link
   |
note: the lint level is defined here
  --> $DIR/intra-doc-alias-ice.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: aborting due to previous error

